--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ dubbo.scan.base-packages=com.guosen.demo.serviceImpl
 
 dubbo.registry.address=10.21.16.31:2181
 dubbo.registry.protocol=zookeeper
+dubbo.registry.timeout=100000
 
