--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,6 @@ dubbo.cloud.subscribed-services=demo
 # dubbo 服务扫描基准包
 dubbo.scan.base-packages=com.guosen.demo.serviceImpl
 
-dubbo.registry.address=${dubbo.registry.address|10.21.16.31:2181}
+dubbo.registry.address=${dubbo.registry.address :10.21.16.31:2181}
 dubbo.registry.protocol=zookeeper
 dubbo.registry.timeout=100000
-
